testing the delete and updating API or function

--- a/reactNative-toDoList/app.json
+++ b/reactNative-toDoList/app.json
@@ -19,10 +19,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.sohaildad.reactNativetoDoList"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "5cee865d-b9ab-4b1c-94d6-283eb4892f1b"
+      }
     }
   }
 }
